2008-09-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($IsInHTMLInteractiveContent): New.

2008-09-18  Wakaba  <wakaba@suika.fam.cx>

	* LangTag.pm: Add checks for remaining requirements from RFC 4646.

	* mklangreg.pl: Sort 'Prefix' values by their length, to ease
	matching.

2008-09-18  Wakaba  <wakaba@suika.fam.cx>

	* LangTag.pm: Warn for private use language subtags.  Error level
	typos fixed.  Support for Suppress-Script field.

	* mklangreg.pl: Support for dumping of nested structure.

2008-09-18  Wakaba  <wakaba@suika.fam.cx>

	* LangTag.pm (check_rfc4646_langtag): Check if a tag is in the
	recommended case as per RFC 4646.

2008-09-18  Wakaba  <wakaba@suika.fam.cx>

	* LangTag.pm (check_rfc4646_langtag): New method.

2008-09-18  Wakaba  <wakaba@suika.fam.cx>

	* mklangreg.pl: New script.

	* Makefile: Updated for creation of the module for language subtag
	registry.
	
2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: WebIDL.html added.

	* WebIDL.pod: New documentation.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Checker's error types are redefined.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Parser's error types are redefined.  Some forward
	compatible parsing bugs are fixed.  Some unreachable codes are
	commented out.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Support for the reminding extended attributes are
	added.  It does not satisfy the definition that a forward
	interface declaration has an extended attribute.  It seems that
	unless explicitly allowed multiple extended attributes with the
	same name is not allowed, though it is not explicitly mentioned in
	the spec.

2008-09-16  Wakaba  <wakaba@suika.fam.cx>

	* WebIDL.pm: Unescapes extended attribute names and extended
	attribute identifiers.  Preserve whether an extended attribute has
	an argument list of not.  Support for extended attributes:
	Constructor, ExceptionConsts, IndexGetter, IndexSetter,
	NameGetter, NameSetter, and Null.