@@ -1,5 +1,10 @@
 2008-09-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentType.t: Updated to disallow 0x0B as text byte (HTML5
+	revision 1738).
+
+2008-09-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-checker.pl: Remove dedicated parser and adopt
 	testfiles.pl parser.
 
