@@ -1,5 +1,14 @@
 2008-09-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentType.pm: 0x0B is no longer a space character (HTML5
+	revision 1738).
+
+	* HTML.pm.src: U+000B is no longer a space character for the
+	algorithm for extracting an encoding from a Content-Type (HTML5
+	revision 1738).
+
+2008-09-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm ($IsInHTMLInteractiveContent): New.
 
 2008-09-18  Wakaba  <wakaba@suika.fam.cx>
